load balancing impl & docs updates