@@ -28,5 +28,19 @@ if ! [[ -f "${JAR_FILE}" ]];then
     exit 1
 fi
 
+# jgc tune
+JAVA_OPTS="
+-XX:+UseG1GC 
+-XX:MaxGCPauseMillis=200 
+-XX:InitiatingHeapOccupancyPercent=45 
+-XX:+ParallelRefProcEnabled 
+-XX:ConcGCThreads=4 
+-XX:ParallelGCThreads=8 
+-XX:+UseStringDeduplication 
+-XX:+HeapDumpOnOutOfMemoryError 
+-XX:HeapDumpPath=/var/log/gatekeeper/heapdump 
+-Xlog:gc*:file=/var/log/gatekeeper/gc.log:tags,uptime,time,level
+"
+
 echo "Starting Gatekeeper with PROXY_TARGET_URL=\"${PROXY_TARGET_URL}\"" | tee -a "${LOG_FILE}"
-java -DPROXY_TARGET_URL="${PROXY_TARGET_URL}" -jar "${JAR_FILE}" | tee -a "${LOG_FILE}"
+java ${JAVA_OPTS} -DPROXY_TARGET_URL="${PROXY_TARGET_URL}" -jar "${JAR_FILE}" | tee -a "${LOG_FILE}"
